--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -9,17 +9,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look, we can do approximate probabilistic inference with a complicated nueral network!\n",
+    "Look, we can do approximate probabilistic inference with a complicated neural network!\n",
     "\n"
    ]
   },
@@ -38,11 +31,8 @@
    "source": [
     "import numpy as np\n",
     "from math import sqrt, ceil\n",
-    "from typing import Any, Dict, Tuple, Optional\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib import rc\n",
-    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "\n",
     "import h5py\n",
     "\n",
@@ -50,6 +40,7 @@
     "import torch.fft as fft\n",
     "import torch.nn as nn\n",
     "from torch.optim import AdamW\n",
+    "from torch.nn.modules.loss import MSELoss\n",
     "\n",
     "from src.nn_modules.fourier_2d_generic import SimpleBlock2dGeneric\n",
     "from src.heatmap import multi_heatmap\n",
@@ -75,13 +66,30 @@
     "data_file = h5py.File(resolve_path('./data/grf_forcing_pico.h5'))\n",
     "data = data_file['valid']\n",
     "\n",
-    "def get_obs(data, t=0, n_steps=2):\n",
+    "def get_obs(data, t=0, n_steps=2, y=False):\n",
     "    x = data['u'][..., t:t+n_steps]\n",
     "    latent = data['f'][...]\n",
-    "    return {\n",
+    "    obs= {\n",
     "        'x': x,\n",
     "        'latent': latent\n",
-    "    }\n"
+    "    }\n",
+    "    if y:\n",
+    "        obs['y'] = data['u'][..., t+n_steps]\n",
+    "\n",
+    "    return obs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dict_as_tensor(d, device=device):\n",
+    "    \"\"\"\n",
+    "    it was faster to write this function than to search the docs for it\n",
+    "    \"\"\"\n",
+    "    return {k: torch.from_numpy(v).to(device) for k, v in d.items()}"
    ]
   },
   {
@@ -116,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = get_obs(data, 0, 10)['x']\n",
+    "arr = get_obs(data, 0, 8)['x']\n",
     "\n",
     "multi_img_time(arr, n_cols=2);\n"
    ]
@@ -195,36 +203,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def plot_heatmap(model, i, loss, error, loss_fn, batch, pred, *args, **kwargs):\n",
-    "    target =  batch['latent'][0, :, :].cpu().numpy()\n",
-    "    est =  model.latent[0, :, :].cpu().numpy()\n",
-    "    err_heatmap = target - est\n",
-    "\n",
-    "    fig = heatmap.multi_heatmap(\n",
-    "        [target, est, err_heatmap],\n",
-    "        [\"Target\", \"Estimate\", \"Error\"], *args, **kwargs)\n",
-    "    # plt.savefig(f\"paper_ml4ps/inverse_reg_{i}.png\",\n",
-    "    #     dpi=300, bbox_inches='tight', pad_inches=0)\n",
-    "    # np.savez_compressed(f\"paper_ml4ps/inverse_reg_{i}.npz\",\n",
-    "    #     target=target,\n",
-    "    #     est=est,\n",
-    "    #     error=err_heatmap\n",
-    "    # )\n",
-    "    plt.show();\n",
-    "    plt.close(\"all\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class NaiveLatent(nn.Module):\n",
+    "class RasterLatent(nn.Module):\n",
     "    def __init__(self,\n",
     "            process_predictor: \"nn.Module\",\n",
-    "            dims: Tuple[int, int]=(256,256),\n",
+    "            dims = (256,256),\n",
     "            n_batch: int=1):\n",
     "        super().__init__()\n",
     "        self.dims = dims\n",
@@ -261,23 +243,12 @@
     "        model,\n",
     "        loss_fn,\n",
     "        optimizer,\n",
-    "        n_iter:int=20,\n",
-    "        check_int:int=1,\n",
-    "        clip_val: Optional[float] = None,\n",
-    "        callback = lambda *x: None,\n",
-    "        # pen_0: float = 0.0,\n",
-    "        pen_1: float = 0.0,\n",
-    "        pen_f: float = 0.0,\n",
-    "        stop_on_truth: bool = False,\n",
-    "        diminishing_returns=1.1,):\n",
+    "        n_iter: int=20,\n",
+    "        check_int: int=1,\n",
+    "        clip_val = None,\n",
+    "        callback = lambda *x: None):\n",
     "    model.train()\n",
     "    model.weights_init()\n",
-    "    prev_loss_v = 10^5\n",
-    "    prev_error = 10^5\n",
-    "    prev_relerr = 10^3\n",
-    "    big_losses = []\n",
-    "    big_loss_fn = MSELoss(reduction='none')\n",
-    "    big_scale = big_loss_fn(torch.zeros_like(batch['latent']), batch['latent']).mean((1,2))\n",
     "    scale = loss_fn(torch.zeros_like(batch['latent']), batch['latent']).item()\n",
     "    for i in range(n_iter):\n",
     "        # Compute prediction error\n",
@@ -292,48 +263,62 @@
     "                torch.nn.utils.clip_grad_value_(group[\"params\"], clip_val)\n",
     "\n",
     "        optimizer.step()\n",
-    "        # sch = self.lr_schedulers()\n",
-    "        # sch.step()\n",
     "\n",
     "        if i % check_int == 0 or i==n_iter-1:\n",
     "            with torch.no_grad():\n",
-    "                # recalc without penalties\n",
-    "                loss_v = loss_fn(pred['forecast'], batch['y']).item()\n",
-    "                if loss_v > diminishing_returns * prev_loss_v and i> 15:\n",
-    "                    print(\"Early stopping at optimum\")\n",
-    "                    break\n",
-    "                prev_loss_v = loss_v\n",
-    "                error = loss_fn(model.latent, batch['latent']).item()\n",
-    "                if error > diminishing_returns * prev_error and stop_on_truth:\n",
-    "                    print(\"Early stopping at minimum prediction error\")\n",
-    "                    break\n",
-    "                prev_error = error\n",
-    "                relerr = sqrt(error/scale)\n",
-    "                ##\n",
-    "                \n",
+    "                loss_v = loss.detach().item()    \n",
     "                big_loss_v = big_loss_fn(pred['forecast'], batch['y']).mean((1,2,3))\n",
-    "                print(big_loss_v.shape)\n",
     "                big_error = big_loss_fn(model.latent, batch['latent']).mean((1,2))\n",
     "                big_relerr = torch.sqrt(big_error/scale)\n",
-    "                big_losses.append(dict(\n",
-    "                    big_loss=big_loss_v.detach().cpu().numpy(),\n",
-    "                    big_error = big_error.detach().cpu().numpy(),\n",
-    "                    relerr=big_relerr.detach().cpu().numpy()\n",
-    "                ))\n",
     "\n",
     "                print(\n",
     "                    f\"loss: {loss:.3e}, error: {error:.3e}, relerror: {relerr:.3e} [{i:>5d}/{n_iter:>5d}]\")\n",
     "                callback(model, i, loss_v, error, loss_fn, batch, pred)\n",
+    "        # target =  batch['latent'][0, :, :].cpu().numpy()\n",
+    "        # est =  model.latent[0, :, :].cpu().numpy()\n",
+    "        # err_heatmap = target - est\n",
+    "        # fig = heatmap.multi_heatmap(\n",
+    "        #     [target, est, err_heatmap],\n",
+    "        #     [\"Target\", \"Estimate\", \"Error\"], *args, **kwargs)\n",
+    "        # plt.show();\n",
+    "        # plt.close(\"all\");\n",
     "\n",
-    "    loss_v = loss.item()\n",
-    "    error = loss_fn(model.latent, batch['latent']).item()\n",
-    "    scale = loss_fn(torch.zeros_like(batch['latent']), batch['latent']).item()\n",
-    "    relerr = sqrt(error/scale)\n",
-    "    print(\n",
-    "        f\"loss: {loss:.3e}, error: {error:.3e}, relerror: {relerr:.3e} scale: {scale:.3e}[{i:>5d}/{n_iter:>5d}]\")\n",
+    "        loss_v = loss.item()\n",
+    "        error = loss_fn(model.latent, batch['latent']).item()\n",
+    "        scale = loss_fn(torch.zeros_like(batch['latent']), batch['latent']).item()\n",
+    "        relerr = sqrt(error/scale)\n",
+    "        print(\n",
+    "            f\"loss: {loss:.3e}, error: {error:.3e}, relerror: {relerr:.3e} scale: {scale:.3e}[{i:>5d}/{n_iter:>5d}]\")\n",
     "\n",
-    "    return loss_v, error, relerr, scale, big_losses, big_scale.detach().cpu().numpy()\n",
-    "\n"
+    "    return loss_v, error, relerr, scale\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RasterLatent(\n",
+    "    process_predictor,\n",
+    "    dims=obs['x'].shape[1:3],\n",
+    "    n_batch=1)\n",
+    "optimizer = AdamW(\n",
+    "    model.parameters(),\n",
+    "    lr=0.0025,\n",
+    "    weight_decay=0.0)\n",
+    "\n",
+    "loss_fn = nn.MSELoss()\n",
+    "\n",
+    "fit(\n",
+    "    dict_as_tensor(get_obs(data,t=0,n_steps=2,y=True)),\n",
+    "    model,\n",
+    "    loss_fn,\n",
+    "    optimizer,\n",
+    "    n_iter=200,\n",
+    "    check_int=5,\n",
+    "    clip_val=None,\n",
+    ")"
    ]
   },
   {
@@ -403,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
